using new switch expressions